Build Dunits for security under a different target using :dunitSecureTest Make sure to have security related DUnits named as *DUnitSecureTest.scala