@@ -203,6 +203,14 @@ task cleanDUnit << {
   delete "${snappyProductDir}/work", "${snappyProductDir}/logs"
   delete "${sparkProductDir}/work", "${sparkProductDir}/logs"
 }
+task cleanSecureDUnit << {
+  String workingDir = "${testResultsBase}/dunitSecure"
+  delete workingDir
+  file(workingDir).mkdirs()
+  // clean spark cluster directories
+  delete "${snappyProductDir}/work", "${snappyProductDir}/logs"
+  delete "${sparkProductDir}/work", "${sparkProductDir}/logs"
+}
 task cleanAllReports << {
   String workingDir = "${testResultsBase}/combined-reports"
   delete workingDir
@@ -213,7 +221,6 @@ task cleanQuickstart << {
   delete workingDir
   file(workingDir).mkdirs()
 }
-
 
 subprojects {
   // the run task for a selected sub-project
@@ -286,6 +293,7 @@ subprojects {
 
     include '**/*.class'
     exclude '**/*DUnitTest.class'
+    exclude '**/*DUnitSecureTest.class'
     exclude '**/*DUnitSingleTest.class'
     exclude '**/*TestBase.class'
 
@@ -318,7 +326,10 @@ subprojects {
     def single = rootProject.hasProperty('dunit.single') ?
         rootProject.property('dunit.single') : null
     if (single == null || single.length() == 0) {
-      def dunitTests = fileTree(dir: testClassesDir, include: '**/*DUnitTest.class')
+      def dunitTests = fileTree(testClassesDir) {
+          include '**/*DUnitTest.class'
+          exclude '**/*DUnitSecureTest.class'
+      }
       FileTree includeTestFiles = dunitTests
       int dunitFrom = rootProject.hasProperty('dunit.from') ?
           getLast(includeTestFiles, rootProject.property('dunit.from')) : 0
@@ -352,6 +363,62 @@ subprojects {
       String now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
       def progress = new File(workingDir, 'progress.txt')
       progress << "${eol}${now} ========== STARTING DUNIT TEST SUITE FOR ${project.name} ==========${eol}${eol}"
+    }
+  }
+
+  task dunitSecureTest(type: Test) {
+    dependsOn ':cleanSecureDUnit'
+    dependsOn ':product'
+    dependsOn ':copyShadowJars'
+    maxParallelForks = 1
+    minHeapSize '1536m'
+    maxHeapSize '1536m'
+
+    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError',
+               '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC',
+               '-XX:CMSInitiatingOccupancyFraction=50',
+               '-XX:+CMSClassUnloadingEnabled', '-ea']
+
+    def single = rootProject.hasProperty('dunitSecure.single') ?
+        rootProject.property('dunitSecure.single') : null
+    if (single == null || single.length() == 0) {
+      def dunitSecureTests = fileTree(testClassesDir) {
+          include '**/*DUnitSecureTest.class'
+          exclude '**/*DUnitTest.class'
+      }
+      FileTree includeTestFiles = dunitSecureTests
+      int dunitFrom = rootProject.hasProperty('dunitSecure.from') ?
+          getLast(includeTestFiles, rootProject.property('dunitSecure.from')) : 0
+      int dunitTo = rootProject.hasProperty('dunitSecure.to') ?
+          getLast(includeTestFiles, rootProject.property('dunitSecure.to')) : includeTestFiles.size()
+
+      int begin = dunitFrom != -1 ? dunitFrom : 0
+      int end = dunitTo != -1 ? dunitTo : includeTestFiles.size()
+      def filteredSet = includeTestFiles.drop(begin).take(end-begin+1).collect {f -> "**/" + f.name}
+      if (begin != 0 || end != includeTestFiles.size()) {
+        println("Picking tests :")
+        filteredSet.each { a -> println(a) }
+      }
+      include filteredSet
+    } else {
+      include single
+    }
+    exclude '**/*Suite.class'
+
+    workingDir = "${testResultsBase}/dunitSecure"
+
+    binResultsDir = file("${workingDir}/binary/${project.name}")
+    reports.html.destination = file("${workingDir}/html/${project.name}")
+    reports.junitXml.destination = file(workingDir)
+
+    systemProperties 'java.net.preferIPv4Stack': 'true',
+                     'SNAPPY_HOME': snappyProductDir
+
+    doFirst {
+      String eol = System.getProperty('line.separator')
+      String now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
+      def progress = new File(workingDir, 'progress.txt')
+      progress << "${eol}${now} ========== STARTING SECURITY DUNIT TEST SUITE FOR ${project.name} ==========${eol}${eol}"
     }
   }
 
@@ -587,7 +654,6 @@ task publishMaven {
       it.getTasksByName('uploadArchives', false).collect { it.path }
   }
 }
-
 
 task generateSources {
   dependsOn ':snappy-spark:generateSources'
@@ -983,8 +1049,6 @@ distTar.mustRunAfter clean, cleanAll
 distZip.mustRunAfter clean, cleanAll
 distProduct.mustRunAfter clean, cleanAll
 
-
-
 task deleteDocsDir(type: Delete) {
   delete "${rootProject.buildDir}/docs"
 }
@@ -1022,7 +1086,7 @@ task docs(type: ScalaDoc) {
   }
   source = allSource
   classpath = files(docProjects.collect { project ->
-   project.sourceSets.main.compileClasspath   
+   project.sourceSets.main.compileClasspath
   })
   destinationDir = file("${rootProject.buildDir}/docs")
 }
@@ -1031,7 +1095,6 @@ task publishDocs(type:Exec) {
   //on linux
   commandLine './publish-site.sh'
 }
-
 
 task precheckin {
   dependsOn cleanAll, buildAll, checkAll, allReports, docs
